--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@payloadcms/payload-cloud": "3.39.1",
     "@payloadcms/richtext-lexical": "3.39.1",
     "@payloadcms/ui": "3.39.1",
+    "@tailwindcss/postcss": "^4.1.7",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
+    "motion": "^12.14.0",
     "next": "15.3.0",
     "payload": "3.39.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "sharp": "0.32.6"
   },
   "devDependencies": {
@@ -33,9 +36,12 @@
     "@types/node": "^22.5.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
+    "postcss": "^8.5.3",
     "prettier": "^3.4.2",
+    "tailwindcss": "^4.1.7",
     "typescript": "5.7.3"
   },
   "engines": {
