--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "motion": "^12.14.0",
     "next": "15.3.0",
     "payload": "3.39.1",
+    "qs-esm": "^7.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "sharp": "0.32.6"
   },
